src/test/ui/did_you_mean/issue-40823.stderr
error[E0596]: cannot borrow immutable borrowed content `*buf` as mutable
  --> $DIR/issue-40823.rs:13:5
   |
13 |     buf.iter_mut();
   |     ^^^ cannot borrow as mutable

error: aborting due to previous error

